// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayPaginationBar renders 1`] = `
<div>
  <div
    class="pagination-bar"
  >
    <div
      class="dropdown pagination-items-per-page"
    >
      <button
        aria-activedescendant=""
        aria-describedby="clay-id-1"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="Items Per Page"
        class="dropdown-toggle btn btn-unstyled"
        role="combobox"
        tabindex="0"
        type="button"
      >
        10 items
        <svg
          class="lexicon-icon lexicon-icon-caret-double-l"
          role="presentation"
        >
          <use
            href="path/to/spritemap#caret-double-l"
          />
        </svg>
      </button>
    </div>
    <div
      class="pagination-results"
      id="clay-id-1"
    >
      Showing 1 to 10 of 100
    </div>
    <nav
      aria-label="Pagination"
    >
      <ul
        class="pagination pagination-root"
      >
        <li
          class="page-item disabled"
        >
          <div
            class="page-link"
            data-testid="prevArrow"
          >
            <svg
              class="lexicon-icon lexicon-icon-angle-left"
              role="presentation"
            >
              <use
                href="path/to/spritemap#angle-left"
              />
            </svg>
          </div>
        </li>
        <li
          class="page-item active"
        >
          <a
            aria-label="Go to Page, 1"
            class="page-link"
            tabindex="0"
          >
            1
          </a>
        </li>
        <li
          class="page-item"
        >
          <a
            aria-label="Go to Page, 2"
            class="page-link"
            tabindex="0"
          >
            2
          </a>
        </li>
        <li
          class="page-item"
        >
          <a
            aria-label="Go to Page, 3"
            class="page-link"
            tabindex="0"
          >
            3
          </a>
        </li>
        <li
          class="page-item"
        >
          <div
            class="dropdown"
          >
            <button
              aria-haspopup="true"
              aria-label="Show Pages 4 Through 9"
              class="dropdown-toggle page-link btn btn-unstyled"
              title="Show Pages 4 Through 9"
              type="button"
            >
              ...
            </button>
          </div>
        </li>
        <li
          class="page-item"
        >
          <a
            aria-label="Go to Page, 10"
            class="page-link"
            tabindex="0"
          >
            10
          </a>
        </li>
        <li
          class="page-item"
        >
          <a
            aria-label="Go to the Next Page, 2"
            class="page-link"
            data-testid="nextArrow"
            role="button"
            tabindex="0"
          >
            <svg
              class="lexicon-icon lexicon-icon-angle-right"
              role="presentation"
            >
              <use
                href="path/to/spritemap#angle-right"
              />
            </svg>
          </a>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`ClayPaginationBar renders without a DropDown 1`] = `
<div>
  <div
    class="pagination-bar"
  >
    <div
      class="pagination-results"
      id="clay-id-6"
    >
      Showing 1 to 10 of 100
    </div>
    <nav
      aria-label="Pagination"
    >
      <ul
        class="pagination pagination-root"
      >
        <li
          class="page-item disabled"
        >
          <div
            class="page-link"
            data-testid="prevArrow"
          >
            <svg
              class="lexicon-icon lexicon-icon-angle-left"
              role="presentation"
            >
              <use
                href="path/to/spritemap#angle-left"
              />
            </svg>
          </div>
        </li>
        <li
          class="page-item active"
        >
          <a
            aria-label="Go to Page, 1"
            class="page-link"
            tabindex="0"
          >
            1
          </a>
        </li>
        <li
          class="page-item"
        >
          <a
            aria-label="Go to Page, 2"
            class="page-link"
            tabindex="0"
          >
            2
          </a>
        </li>
        <li
          class="page-item"
        >
          <a
            aria-label="Go to Page, 3"
            class="page-link"
            tabindex="0"
          >
            3
          </a>
        </li>
        <li
          class="page-item"
        >
          <div
            class="dropdown"
          >
            <button
              aria-haspopup="true"
              aria-label="Show Pages 4 Through 9"
              class="dropdown-toggle page-link btn btn-unstyled"
              title="Show Pages 4 Through 9"
              type="button"
            >
              ...
            </button>
          </div>
        </li>
        <li
          class="page-item"
        >
          <a
            aria-label="Go to Page, 10"
            class="page-link"
            tabindex="0"
          >
            10
          </a>
        </li>
        <li
          class="page-item"
        >
          <a
            aria-label="Go to the Next Page, 2"
            class="page-link"
            data-testid="nextArrow"
            role="button"
            tabindex="0"
          >
            <svg
              class="lexicon-icon lexicon-icon-angle-right"
              role="presentation"
            >
              <use
                href="path/to/spritemap#angle-right"
              />
            </svg>
          </a>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`ClayPaginationBar totalItems with 0 will render the pagination bar with only one page 1`] = `
<div>
  <div
    class="pagination-bar"
  >
    <div
      class="pagination-results"
      id="clay-id-9"
    >
      Showing 1 to 1 of 1
    </div>
    <nav
      aria-label="Pagination"
    >
      <ul
        class="pagination pagination-root"
      >
        <li
          class="page-item disabled"
        >
          <div
            class="page-link"
            data-testid="prevArrow"
          >
            <svg
              class="lexicon-icon lexicon-icon-angle-left"
              role="presentation"
            >
              <use
                href="path/to/spritemap#angle-left"
              />
            </svg>
          </div>
        </li>
        <li
          class="page-item active"
        >
          <a
            aria-label="Go to Page, 1"
            class="page-link"
            tabindex="0"
          >
            1
          </a>
        </li>
        <li
          class="page-item disabled"
        >
          <div
            class="page-link"
            data-testid="nextArrow"
          >
            <svg
              class="lexicon-icon lexicon-icon-angle-right"
              role="presentation"
            >
              <use
                href="path/to/spritemap#angle-right"
              />
            </svg>
          </div>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;
